Cleanup modernization issues in test code